@@ -1,3 +1,6 @@
+- add is_package_installed() in URPM/Resolve.pm
+  (to be used in urpmi 5.20)
+
 Version 3.13 - 20 May 2008, by Pascal "Pixel" Rigaux
 
 - do not ignore dropped provide from updated package (mdvbz#40842)
